@@ -1,4 +1,5 @@
 3.6
+ * COPY TO should have higher double precision (CASSANDRA-11255)
  * Remove hard-coded SSL cipher suites and protocols (CASSANDRA-10508)
  * Improve concurrency in CompactionStrategyManager (CASSANDRA-10099)
  * (cqlsh) interpret CQL type for formatting blobs (CASSANDRA-11274)
